objects/PSS_Catalog__c.object
<CustomObject>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSS_ID__c</fullName>
        <description>Unique ID for this Catalog entry from Services</description>
        <externalId>true</externalId>
        <label>PSS ID</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scope__c</fullName>
        <description>Full definition of the scope of the service catalog item</description>
        <label>Scope</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>summary__c</fullName>
        <description>A summary of the catalog item</description>
        <label>summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tokenCount__c</fullName>
        <description>The cost of the catalog entry in tokens</description>
        <label>Tokens</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PSS Catalog</label>
    <nameField>
        <label>PSS Catalog Entry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSS Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>